<resources>
    <string name="app_name">Tinkerlink</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="support_name">Soporte tinkerlink</string>
    <string name="sign_email_error">email inválido</string>
    <string name="sign_name_error">Error nombre no válido</string>
    <string name="sign_datebirth_error">Error en fecha de nacimiento</string>
    <string name="sign_imageProfile_error">Olvidaste agregar tu foto de perfil</string>
    <string name="sign_sex_error">Olvidaste decirnos de qué sexo eres</string>
    <string name="sign_phone_error">Olvidaste decirnos tu teléfono</string>
    <string name="sign_request_error">No hemos podido enviar tu petición. Revisa tu conexión a internet</string>
    <string name="sign_code_error">Ingresa tu contraseña</string>
    <string name="sign_code_validation_title_error">Tu contraseña es incorrecta</string>
    <string name="sign_code_validation_message_error">Inténtalo nuevamente</string>
    <string name="login_enter_code_error">Ingresa la contraseña que recibiste por SMS</string>
    <string name="login_enter_email_error">Ingresa tu cuenta de correo</string>
    <string name="login_user_duplicate_error">El teléfono asociado a tu cuenta fue validado con un user diferente. Valida un nuevo número para que puedas ingresar</string>
    <string name="login_code_expire_error">La contraseña que ingresaste ha expirado.Te hemos enviado una de nuevo, revisa tus mensajes.</string>
    <string name="login_code_error">La contraseña es incorrecta. Inténtalo nuevamente</string>
    <string name="login_recover_error">Tu teléfono o tu contraseña es incorrectos</string>
    <string name="login_enter_email_pasword_error">El email o password es incorrecto</string>
    <string name="newsFeed_like_error">No hemos podido enviar tu petición. Revisa tu conexión a internet</string>
    <string name="newsFeed_chat_error">No hemos podido enviar tu mensaje. Inténtalo nuevamente</string>
    <string name="newsFeed_share_error">No hemos podido compartir tu post. Inténtalo nuevamente</string>
    <string name="newsFeed_contact_error">No hemos podido enviar tu petición. Inténtalo nuevamente</string>
    <string name="newsFeed_delete_contact_error">No hemos podido eliminar este contacto. Inténtalo nuevamente</string>
    <string name="newsFeed_block_contact_error">No hemos podido bloquear este contacto. Inténtalo nuevamente</string>
    <string name="newsFeed_status_error">No podemos publicar un status vacío, agrega unas cuantas palabras</string>
    <string name="create_category_error">¿Cuál es tu ocupación?</string>
    <string name="create_invalid_number_photos_error">El número de fotos en esta sección está limitado a 3</string>
    <string name="profile_upload_photo_error">No hemos podido actualizar tu foto. Inténtalo nuevamente</string>
    <string name="profile_delete_photo_error">No hemos podido eliminar tu foto. Inténtalo nuevamente</string>
    <string name="profile_update_profile_error">No hemos podido actualizar actualizár tu perfil. Inténtalo nuevamente</string>
    <string name="profile_no_selecte_users_error">Por favor selecciona al menos a uno de tus contactos para pedirle que te recomiende</string>
    <string name="profile_request_recommendation_error">No hemos podido realizar tu petición. Inténtalo nuevamente</string>
    <string name="profile_give_recommendation_error">No hemos podido realizar tu petición. Inténtalo nuevamente</string>
    <string name="profile_give_recommendation_no_description_error">Seguro que tienes algunas palabras para hacer tu recomendación</string>
    <string name="setttings_logout_error">No hemos podido cerrar tu sesión. Inténtalo nuevamente</string>
    <string name="create_category_form_error">No hemos podido realizar tu petición. Inténtalo nuevamente.</string>
    <string name="create_prefession_form_error">Olvidaste decirnos a qué te dedicas</string>
    <string name="create_experience_form_error">Olvidaste decirnos cuántos años de experiencia tienes</string>
    <string name="create_currency_form_error">Selecciona el tipo de moneda para tu presupuesto</string>
    <string name="create_pay_form_error">¿Cuánto es tu presupuesto?</string>
    <string name="create_time_form_error">Selecciona la periodicidad</string>
    <string name="create_time_publish_form_error">No hemos podido realizar tu petición. Inténtalo nuevamente.</string>
    <string name="create_address_form_error">Selecciona tu ubicación</string>
    <string name="contacts_invite_error">No hemos podido realizar tu petición. Inténtalo nuevamente.</string>
    <string name="newsFeed_share_success">Has compartido un post</string>
    <string name="newsFeed_chat_success">Mensaje enviado</string>
    <string name="newsFeed_like_success">Te ha gustado el post</string>
    <string name="newsFeed_request_user_contact">Solicitud de contacto enviada</string>
    <string name="newsFeed_cancel_user_contact">Solicitud de contacto cancelada</string>
    <string name="newsFeed_delete_user_contact">El contacto ha sido eliminado</string>
    <string name="newsFeed_sms_user_contact">Invitación enviada</string>
    <string name="newsFeed_block_contact">El contacto ha sido bloqueado</string>
    <string name="newsFeed_accept_contact">Nuevo user añadido</string>
    <string name="profile_update_photo_success">Tu foto se ha actualizado</string>
    <string name="profile_delete_photo_success">Tu foto se ha eliminado</string>
    <string name="profile_update_profile_success">Tu perfil se ha actualizado</string>
    <string name="profile_give_recommendation_success">Se ha enviado tu recomendación</string>
    <string name="card_deleted_success">Has eliminado tu card</string>
    <string name="newsFeed_status_success">Has actualizado tu estado</string>
    <string name="contacts_invite">Solicitud de contacto enviada</string>
    <string name="action_search">Buscar</string>
    <string name="action_chat">Chat</string>
    <string name="action_notifications">Notificaciones</string>
    <string name="action_search_card">Buscar</string>
    <string name="action_create_card">Crear una card</string>
    <string name="action_invite">Invitar</string>
    <string name="action_watch_profile">Ver Perfil</string>
    <string name="action_send_message">Enviar mensaje</string>
    <string name="action_start_chat">Iniciar chat</string>
    <string name="action_back">Atrás</string>
    <string name="action_edit_photo">Editar foto</string>
    <string name="action_delete_photo">Eliminar foto</string>
    <string name="action_add_contact">Agregar contacto</string>
    <string name="action_cancel_contact">Cancelar contacto</string>
    <string name="action_accept_contact">Aceptar contacto</string>
    <string name="action_add_block_contact">Bloquear contacto</string>
    <string name="action_add_delete_contact">Delete contacto</string>
    <string name="action_edit_profile">Editar perfil</string>
    <string name="action_gallery">Galería</string>
    <string name="action_camera">Cámara</string>
    <string name="action_delete_chat">Eliminar Chat</string>
    <string name="action_delete_notifications">Eliminar Notificación</string>
    <string name="action_onlyme">Solo yo</string>
    <string name="action_everybody">Público</string>
    <string name="action_my_contacts">Solo mis contactos</string>
    <string name="cancel_button_title">Cancelar</string>
    <string name="ok_button_title">Aceptar</string>
    <string name="send_button_title">Enviar</string>
    <string name="add_button_title">Agregar</string>
    <string name="menu_item_title_inicio">Inicio</string>
    <string name="menu_item_title_contactos">Contactos</string>
    <string name="menu_item_title_chats">Chats</string>
    <string name="menu_item_title_notifications">Notificaciones</string>
    <string name="menu_item_title_settings">Ajustes</string>
    <string name="login_title">Inicia sessión</string>
    <string name="login_phone_number">NÚMERO DE MOVIL</string>
    <string name="login_password">CONTRASEÑA</string>
    <string name="login_password_hint">Introduce tu contraseña</string>
    <string name="login_phone_hint">Introduce tu número de telefono</string>
    <string name="login_start_session">INICIAR SESIÓN</string>
    <string name="login_start_google_session">Iniciar sesion con gmail</string>
    <string name="login_start_facebook_session">Iniciar sesion con facebook</string>
    <string name="configuration_change_password">Cambiar contraseña</string>
    <string name="configuration_change_password_message">Escoge una nueva contraseña única para tu cuenta</string>
    <string name="configuration_phone_number">Número de móvil</string>
    <string name="configuration_phone_number_message">Cambia tu número de móvil</string>
    <string name="configuration_phone_contacts">Importar contactos</string>
    <string name="configuration_phone_contacts_message">Averigua a quien ya conoces en Tinkerlink</string>
    <string name="configuration_privacy">Privacidad</string>
    <string name="configuration_privacy_message">Escoge quienes pueden ver el contenido de tu perfil y edaita tus contactos bloqueados.</string>
    <string name="configuration_help_tinkerlink">Centro de ayuda de Tinkerlink</string>
    <string name="configuration_privacy_policy">Política de privacidad</string>
    <string name="configuration_frequently_questions">Preguntas frecuentes</string>
    <string name="configuration_close_session">CERRAR SESIÓN</string>
    <string name="configuration_create_title">Crear una nueva contraseña</string>
    <string name="configuration_create_message">Las contraseñas son sensibles a las mayúsculas y deben contener como mínimo 6 caracteres.</string>
    <string name="configuration_password_title">Escribe tu contraseña actual</string>
    <string name="configuration_password_hint">Contraseña</string>
    <string name="configuration_new_password_repeat_title">Vuelve a escribir tu contraseña nueva</string>
    <string name="configuration_new_password_repeat_hint">Contraseña nueva</string>
    <string name="configuration_save_password">GUARDAR</string>
    <string name="configuration_forgotten_password">¿Has olvidado tu contraseña?</string>
    <string name="configuration_profile_notifications_email">Notificaciones por correo electrónico</string>
    <string name="configuration_profile_notifications_movil_permissions_title">Notificaciones en el móvil</string>
    <string name="configuration_profile_notifications_movil_permissions_message">Te avisamos cuando alguién</string>
    <string name="configuration_profile_notifications_movil_permissions_recommendation">Te hace una recommendation</string>
    <string name="configuration_profile_notifications_movil_permissions_share">Comparte contenido tuyo</string>
    <string name="configuration_profile_notifications_movil_permissions_send_message">Te envía un mensaje</string>
    <string name="configuration_profile_notifications_movil_permissions_request_contact">Nueva solicitud de contacto</string>
    <string name="configuration_profile_notifications_movil_permissions_accept_contact">Acepta tu solicitud de contacto</string>
    <string name="configuration_profile_notifications_movil_permissions_match_cards">Encontramos coincidencias en tarjetas</string>
    <string name="import_contacts_message">Comienza añadiendo  tu correo electrónico o escogiendo un proveedor de servicios</string>
    <string name="import_contacts_email">Correo electrónico</string>
    <string name="import_contacts_email_hint">ejemplo@ejemplo.com</string>
    <string name="import_contacts_continue">CONTINUAR</string>
    <string name="import_contacts_phonebook">Importar contactos de mi agenda</string>
    <string name="import_contacts_gmail">Importar contactos de gmail</string>
    <string name="import_contacts_facebook">Importar contactos de facebook</string>
</resources>