<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_big"
            android:layout_marginRight="@dimen/margin_big"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.cronosgroup.tinkerlink.view.customviews.TLTextView
                style="@style/TextViewLoginSecctionsStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_mediun"
                android:gravity="left"
                android:text="@string/configuration_create_title" />

            <com.cronosgroup.tinkerlink.view.customviews.TLTextView
                style="@style/TextViewLoginSecctionsStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_mediun"
                android:gravity="left"
                android:text="@string/configuration_create_message"
                app:fontName="Light" />

            <com.cronosgroup.tinkerlink.view.customviews.TLTextView
                style="@style/TextViewLoginSecctionsStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_mediun"
                android:gravity="left"
                android:text="@string/configuration_password_title" />

            <com.cronosgroup.tinkerlink.view.customviews.TLEditText
                android:id="@+id/currentPassword"
                style="@style/EditFormStyle"
                android:hint="@string/configuration_password_hint"
                android:inputType="text" />

            <com.cronosgroup.tinkerlink.view.customviews.TLTextView
                style="@style/TextViewLoginSecctionsStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_mediun"
                android:gravity="left"
                android:text="@string/configuration_new_password_repeat_title" />

            <com.cronosgroup.tinkerlink.view.customviews.TLEditText
                android:id="@+id/newPassword"
                style="@style/EditFormStyle"
                android:hint="@string/configuration_new_password_repeat_hint"
                android:inputType="text" />

            <com.cronosgroup.tinkerlink.view.customviews.TLButton
                android:id="@+id/saveButton"
                style="@style/SignButtonStyle"
                android:layout_marginTop="@dimen/margin_plus_big"
                android:background="@drawable/button_sign_states"
                android:text="@string/configuration_save_password"
                android:textColor="@color/white" />

            <com.cronosgroup.tinkerlink.view.customviews.TLTextView
                android:id="@+id/recoveryButton"
                style="@style/TextViewLoginSecctionsStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/button_default_states"
                android:gravity="center"
                android:minHeight="@dimen/view_big_height"
                android:text="@string/configuration_forgotten_password" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>