<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_mediun"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.cronosgroup.tinkerlink.view.customviews.TLImageView
                    android:layout_width="@dimen/view_max_height_big"
                    android:layout_height="@dimen/view_max_height_big"
                    android:layout_marginTop="@dimen/margin_big"
                    android:background="@drawable/background_gray" />

                <com.cronosgroup.tinkerlink.view.customviews.TLTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_big"
                    android:text="@string/login_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_big"
                    app:fontName="Regular" />

                <com.cronosgroup.tinkerlink.view.customviews.TLTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_plus_big"
                    android:text="@string/login_phone_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_mediun"
                    app:fontName="Regular" />

                <com.cronosgroup.tinkerlink.view.customviews.TLEditText
                    android:id="@+id/idUser"
                    style="@style/EditFormStyle"
                    android:hint="@string/login_phone_hint"
                     />

                <com.cronosgroup.tinkerlink.view.customviews.TLTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_big"
                    android:text="@string/login_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_mediun"
                    app:fontName="Regular" />

                <com.cronosgroup.tinkerlink.view.customviews.TLEditText
                    android:id="@+id/passwordUser"
                    style="@style/EditFormStyle"
                    android:hint="@string/login_password_hint"
                     />

                <com.cronosgroup.tinkerlink.view.customviews.TLButton
                    android:id="@+id/loginbt"
                    style="@style/SignButtonStyle"
                    android:layout_marginTop="@dimen/margin_big"
                    android:background="@drawable/button_sign_states"
                    android:text="@string/login_start_session" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@color/gray" />

            <com.cronosgroup.tinkerlink.view.customviews.TLButton
                android:id="@+id/googlebt"
                style="@style/SignButtonStyle"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/button_sign_google_states"
                android:drawableLeft="@mipmap/login_facebooklogo"
                android:paddingLeft="@dimen/padding_content_big"
                android:text="@string/login_start_google_session" />

            <com.cronosgroup.tinkerlink.view.customviews.TLButton
                android:id="@+id/facebookbt"
                style="@style/SignButtonStyle"
                android:layout_marginTop="@dimen/margin_big"
                android:background="@drawable/button_sign_facebook_states"
                android:drawableLeft="@mipmap/login_facebooklogo"
                android:paddingLeft="@dimen/padding_content_big"
                android:text="@string/login_start_facebook_session" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>